# mini-tools

./: .gitignore  README.md
RCLI/: Cargo.toml  README.md
RCLI/assets/: blake3.txt
RCLI/src/: lib.rs  main.rs  opts.rs  process.rs  utils.rs
RCLI/src/opts/: base64.rs  csv.rs  gen_pass.rs  http.rs  text.rs
RCLI/src/process/: b64.rs  csv_convert.rs  gen_pass.rs  http_serve.rs  text.rs
photo_classification/: Cargo.toml  README.md
photo_classification/src/: main.rs
port_scanner/: Cargo.toml  README.md
port_scanner/src/: main.rs
