[package]
name = "rcli"
version = "0.1.0"
edition = "2024"
authors = ["zhang"]


[dependencies]
clap = { version = "4.5.48", features = ["derive"] }
csv = "1.3.1"
serde = { version = "1.0.226", features = ["derive"] }
serde_json = "1.0.145"
anyhow = "1.0.100"
serde_yaml = "=0.9.33"
rand = "0.9.2"
zxcvbn = "3.1.0" # 用于验证密码强度
base64 = "0.22.1"
blake3 = "1.8.2"
ed25519-dalek = "2.2.0"
tokio = { version = "1.47.1", features = ["rt", "rt-multi-thread", "net", "fs", "macros"] }
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
tracing = { version = "0.1.41" }
axum = { version = "0.8.6", features = ["http2", "query", "tracing"] }
tower-http = { version = "0.6.6", features = ["fs"] }