[package]
name = "photo_classification"
version = "0.1.0"
edition = "2021"

[dependencies]
kamadak-exif = { version = "0.5.5" }                # 用于获取照片的属性
walkdir = { version = "2.5.0" }                     # 用于递归遍历目录
clap = { version = "4.5.4", features = ["derive"] } # 命令行参数分析器
sha2 = { version = "0.10.8" }                       # 计算文件sha256
anyhow = { version = "1.0.86" }                     # 用于错误处理
strum_macros = { version = "0.26.2" }               # 用于处理枚举,可以将枚举转化为有格式的字符串
serde = { version = "1.0.202" }                     # 用于序列化与反序列化的框架
once_cell = { version = "1.19.0" }                  # 单个赋值格和惰性值。
chrono = { version = "0.4.38" }                     # 时间处理
